# DeepCore

./: .gitignore  .sourcery.yaml  README.md  README_tracin_order.md  calculate_oti_scores.py  change_name.py  combined_flip.sh  experiment_utils.py  grand_flip.sh  infl_flip.sh  logging_utils.py  main.py  order.py  oti_10_seed_slurm.sh  oti_flip.sh  oti_score.py  playground.py  plot_across_seeds.py  plot_flip.py  plot_oti.py  plot_tracin.py  pyproject.toml  read_para.py  read_result.py  requirements.txt  slurm_batch.sh  slurm_job.sh  spec-file.txt  top_k.py  tracin_10_seed_slurm.sh  tracin_flip.sh  tracin_order.sh  utils.py
deepcore/datasets/: __init__.py  corrupted_dataset.py  flipped_dataset.py  news.py
deepcore/methods/: __init__.py  ad_oti.py  cal.py  contextualdiversity.py  coresetmethod.py  craig.py  deepfool.py  earlytrain.py  glister.py  gradmatch.py  grand.py  herding.py  infl.py  influence_method.py  kcentergreedy.py  loo.py  oti.py  selection_methods.py  submodular.py  uncertainty.py
deepcore/nets/: __init__.py  inceptionv3.py  mobilenetv3.py  wideresnet.py
experiment/: boundary_detection.py  corrupt.py  early_detection_comparison.py  experiment_utils.py  flip.py  tracin_order_experiment.py  train_and_eval.py
liveval/: utils.py
liveval/datasets/: adult.py  boundary_dataset.py  cache_utils.py  corrupted_dataset.py  (+4 more)
script/: __init__.py  all_exp.py  boundary_detection_experiment.py  early_detection_experiment.py  exp_heatmap.py  infl_flip.py  loo_flip.py  oti_flip.py  run_tracin_order_stability.py  tracin_flip.py
tests/: test_flipped_dataset.py
(+20 files in other folders)
