[project]
name = "deepcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backpack-for-pytorch>=1.7.1",
    "jupyter>=1.1.1",
    "matplot>=0.1.9",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "prefetch-generator>=1.0.3",
    "psutil>=7.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "tqdm>=4.67.1",
]
